プリファレンス内容が突然消えるバグを修正。 Scaffold生成時の、生成先フォルダ選択コンボのデフォルト値を修正。
git-svn-id: https://www.seasar.org/svn/chura/trunk@974 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/dolteng/org.seasar.dolteng.eclipse.plugin/plugin.xml
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/plugin.xml
@@ -612,7 +612,7 @@
    </extension>
    <extension
          point="org.eclipse.core.runtime.preferences">
-      <initializer class="org.seasar.dolteng.eclipse.preferences.PreferenceInitializer"/>
+      <initializer class="org.seasar.dolteng.eclipse.preferences.DoltengPreferenceInitializer"/>
    </extension>
    <extension
          point="org.eclipse.ui.actionSets">
