pom.xmlの整形に対応。
git-svn-id: https://www.seasar.org/svn/chura/trunk@976 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/dolteng/org.seasar.dolteng.projects/build.properties
+++ b/dolteng/org.seasar.dolteng.projects/build.properties
@@ -4,7 +4,8 @@ bin.includes = META-INF/,\
                template/,\
                schema/,\
                icons/,\
-               lib/serializer.jar
+               lib/serializer.jar,\
+               lib/xalan-2.6.0.jar
 jars.compile.order = dolteng-projects.jar
 source.dolteng-projects.jar = target/classes/,\
                               src/main/java/
