ウィザードのカテゴリおよび、メッセージリソースに含まれるChuraをDoltengに変更
git-svn-id: https://www.seasar.org/svn/chura/trunk@977 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/dolteng/org.seasar.dolteng.projects/plugin.xml
+++ b/dolteng/org.seasar.dolteng.projects/plugin.xml
@@ -75,8 +75,8 @@
         class="org.seasar.dolteng.projects.wizard.ChuraProjectWizard"
         hasPages="true"
         icon="icons/chura.png"
-        id="churaProjectWizard"
-        name="Chura Project"
+        id="doltengProjectWizard"
+        name="Dolteng Project"
         project="true"/>
   </extension>
   <extension
