--- a/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
@@ -77,7 +77,7 @@ JPA_ASSOCIATION_DIALOG_OPTIONAL=optional :
 JPA_ASSOCIATION_DIALOG_MAPPEDBY=mappedBy :
 REFRESH=&Refresh...
 LOAD_FROM_PROJECT=Load From Project...
-WIZARD_CHURA_PROJECT_TITLE=Create a Chura Project
+WIZARD_CHURA_PROJECT_TITLE=Create a Dolteng Project
 WIZARD_PAGE_CHURA_JRE_CONTAINER=JRE Container
 WIZARD_PAGE_CHURA_USE_DEFAULT_JRE=Use Def&ault JRE (Currently ''{0}'')
 WIZARD_PAGE_CHURA_BASIC_SETTINGS=Basic Settings
