--- a/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
@@ -128,3 +128,5 @@ RETYPE_TO=Change type to {0}
 PACKAGEFRAGMENT_ROOT=PackageFragmentRoot :
 ROOT_PKG=Root Package Name :
 SCAFFOLD_TYPE=Scaffold Type :
+LABEL_DYNAMIC_PROP_NAME=name
+LABEL_DYNAMIC_PROP_VALUE=value
