kickstartファイルの生成、及び、kickstartファイルによるプロジェクト生成に対応。
git-svn-id: https://www.seasar.org/svn/chura/trunk@987 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
@@ -96,6 +96,7 @@ WIZARD_PAGE_CHURA_WEBAPP_ROOT=Webapp Root :
 WIZARD_PAGE_CHURA_TEST_JAVA_PATH=Test Java Source Path :
 WIZARD_PAGE_CHURA_TEST_RESOURCE_PATH=Test Java Resource Path :
 WIZARD_PAGE_CHURA_TEST_OUT_PATH=Test Java Output Path:
+WIZARD_PAGE_KICKSTART_FILE_PATH=Kickstart File path:
 WIZARD_PAGE_PAGE_FIELD_SELECTION=Edit Page fields
 WIZARD_PAGE_CREATION_DESCRIPTION=Edit Field Modifier, Field Type and Field Name
 WIZARD_PAGE_PAGE_TREE_LABEL=Available Fields ...
