--- a/dolteng/org.seasar.dolteng.projects/build.properties
+++ b/dolteng/org.seasar.dolteng.projects/build.properties
@@ -5,7 +5,9 @@ bin.includes = META-INF/,\
                schema/,\
                icons/,\
                lib/serializer.jar,\
-               lib/xalan-2.6.0.jar
+               lib/xalan-2.6.0.jar,\
+               lib/xpp3_min-1.1.3.4.O.jar,\
+               lib/xstream-1.2.1.jar
 jars.compile.order = dolteng-projects.jar
 source.dolteng-projects.jar = target/classes/,\
                               src/main/java/
